force-app/main/default/objects/Safety_Permit__c.object
<CustomObject>
    <fields>
        <fullName>AE1_UI__c</fullName>
        <label>AE1 UI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE1</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Safety Permit (AE1)</relationshipLabel>
        <relationshipName>Safety_Permit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE2_UI__c</fullName>
        <label>AE2 UI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE2</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Safety Permit (AE2)</relationshipLabel>
        <relationshipName>Safety_Permit2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AGSI2_UI__c</fullName>
        <label>AGSI2 UI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGSI2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AGSI2</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Safety Permit (AGSI2)</relationshipLabel>
        <relationshipName>Safety_Permit4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AGSI_UI__c</fullName>
        <label>AGSI UI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AGSI</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Safety Permit (AGSI)</relationshipLabel>
        <relationshipName>Safety_Permit3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_TOP_Group_Text__c</fullName>
        <label>Applicant TOP Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_TOP_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant TOP Group</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Safety Permit</relationshipLabel>
        <relationshipName>Safety_Permit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Partial</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Not Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bearer1_UI__c</fullName>
        <label>Bearer1 UI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bearer1</label>
        <referenceTo>THOR_Applicant_Bearer__c</referenceTo>
        <relationshipLabel>Safety Permit</relationshipLabel>
        <relationshipName>Safety_Permit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bearer2_UI__c</fullName>
        <label>Bearer2 UI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bearer2</label>
        <referenceTo>THOR_Applicant_Bearer__c</referenceTo>
        <relationshipLabel>Safety Permit (Bearer2)</relationshipLabel>
        <relationshipName>Safety_Permit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expired_Date_1__c</fullName>
        <label>Expired Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired_Date_2__c</fullName>
        <label>Expired Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired_Date_3__c</fullName>
        <label>Expired Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extend_Certificate__c</fullName>
        <label>Extend Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>7D</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>30</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>1Y</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extended_From_Date_1__c</fullName>
        <label>Extended From Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_From_Date_2__c</fullName>
        <label>Extended From Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_From_Date_3__c</fullName>
        <label>Extended From Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_AE_UI__c</fullName>
        <label>External AE UI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External AE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Safety_Permit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Functional_Location_Text__c</fullName>
        <label>Functional Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Location</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>Safety Permit</relationshipLabel>
        <relationshipName>Safety_Permit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Plant_Text__c</fullName>
        <label>Main Work Center Plant Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Work Center Plant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Safety Permit (Main Work Center Plant)</relationshipLabel>
        <relationshipName>Safety_Permit2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Text__c</fullName>
        <label>Main Work Center Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Work Center</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Safety Permit (Main Work Center)</relationshipLabel>
        <relationshipName>Safety_Permit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_CEREQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non CEREQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Description__c</fullName>
        <label>Permit Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_to_Work_Date__c</fullName>
        <label>Permit to Work Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planner_group__c</fullName>
        <label>Planner group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Plant_Text__c</fullName>
        <label>Planning Plant Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Plant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Safety Permit</relationshipLabel>
        <relationshipName>Safety_Permit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Section__c</fullName>
        <label>Plant Section</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAM__c</fullName>
        <label>RAM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_WCM_object__c</fullName>
        <label>Type of WCM object</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Detail__c</fullName>
        <label>Work Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Safety Permit</label>
    <nameField>
        <label>Safety Permit Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>